--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-_site
-.sass-cache
-.jekyll-metadata
-
 node_modules/
+.vscode/
+*.db
+npm-debug.log
+*.log
+_site/
+Gemfile.lock
+.sass-cache/
+.jekyll-metadata
+.DS_Store
